--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
 
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous" />
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 
     <style>
         body {
@@ -55,6 +55,11 @@
             border-radius: 10px;
             min-height: 100px;
         }
+
+        img {
+            height: 200px;
+            width: 400px;
+        }
     </style>
 </head>
 
@@ -63,7 +68,7 @@
         <div class="weather-dashboard mx-auto">
 
             <div class="weather-header text-center">
-                <img src="https://img.icons8.com/emoji/96/000000/sun-emoji.png" alt="Sun Icon" />
+                <img src="Telly_Sun.jpeg" alt="Sun Icon" />
                 <h1 class="m-0">Weather Dashboard</h1>
             </div>
             
