--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         }
 
         .weather-header img {
-            width: 50px;
-            height: 50px;
+            width: 350px;
+            height: 150px;
             margin-right: 1rem;
         }
 
@@ -56,10 +56,6 @@
             min-height: 100px;
         }
 
-        img {
-            height: 200px;
-            width: 400px;
-        }
     </style>
 </head>
 
@@ -68,7 +64,7 @@
         <div class="weather-dashboard mx-auto">
 
             <div class="weather-header text-center">
-                <img src="Telly_Sun.jpeg" alt="Sun Icon" />
+                <img src="Telly_Sun.jpeg" alt="Sun Icon" height="200" width="600" />
                 <h1 class="m-0">Weather Dashboard</h1>
             </div>
             
