--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         }
 
         .weather-header img {
-            width: 350px;
+            width: 250px;
             height: 150px;
             margin-right: 1rem;
         }
@@ -56,15 +56,27 @@
             min-height: 100px;
         }
 
+    .custom-light-blue {
+        background-color: #add8e6; 
+    }
+
+    .footer {
+        height:"40";
+        width:"400"; 
+        align-items: center;
+
+    }
+</style>
+
     </style>
 </head>
-
+<main>
 <body>
     <div class="container py-5">
         <div class="weather-dashboard mx-auto">
 
             <div class="weather-header text-center">
-                <img src="Telly_Sun.jpeg" alt="Sun Icon" height="200" width="600" />
+                <img src="Telly_Sun.jpeg" alt="Sun Icon" height="200" width="600" class="rounded" />
                 <h1 class="m-0">Weather Dashboard</h1>
             </div>
             
@@ -83,7 +95,8 @@
 
         </div>
     </div>
-
+    </main>
+</body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JFZ/xIu1zEpj60YvXn+xMZfD8KcbRw0lF9gGZj27lExSqsXGQq1WQFShoOf0Uh4N" crossorigin="anonymous"></script>
 
