--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
-    <link href="stylesheet.css" rel="stylesheet">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <!-- Boostrap CSS 5.3 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+        rel="stylesheet" crossorigin="anonymous"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr">
 
+    <!-- Custom CSS -->
+    <link href="./assets/css/stylesheet.css" rel="stylesheet">
 </head>
-<main>
 <body>
+<main>
     <div class="container py-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div class="weather-header d-flex align-items-center">
@@ -21,9 +23,10 @@
                 <h1 class="m-0">Weather Dashboard</h1>
             </div>
             <div>
-                <a href="contact.html" class="btn btn-outline-primary">Contact Us</a>
+                <a href="./contact.html" class="btn btn-outline-primary">Contact Us</a>
             </div>
         </div>
+
         <div class="weather-dashboard mx-auto">
             <div class="row justify-content-center mb-4 input-section">
                 <div class="col-md-8 d-flex mb-2">
@@ -51,11 +54,14 @@
             </div>
         </div>
     </div>
-    </main>
-</body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JFZ/xIu1zEpj60YvXn+xMZfD8KcbRw0lF9gGZj27lExSqsXGQq1WQFShoOf0Uh4N" crossorigin="anonymous"></script>
-    <script src="./assets/js/script.js"></script>
-</body>
+</main>
 
+<!-- Bootstrap JS 5.3 -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-JFZ/xIu1zEpj60YvXn+xMZfD8KcbRw0lF9gGZj27lExSqsXGQq1WQFShoOf0Uh4N"
+    crossorigin="anonymous"></script>
+
+<!-- Custom JS -->
+<script src="./assets/js/script.js"></script>
+</body>
 </html>
