--- a/contact.html
+++ b/contact.html
@@ -5,9 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link href="stylesheet.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+
+    <!-- Boostrap CSS 5.3 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+        rel="stylesheet" crossorigin="anonymous"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr">
+
+    <!-- Custom CSS -->
+    <link href="./assets/css/stylesheet.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,7 +47,7 @@
             <div class="col-md-6">
                 <div class="p-4 bg-light rounded shadow-sm h-100">
                     <h4>Get in Touch</h4>
-                    <p>If you’d like to discuss the weather app, data sources, or potential collaborations, reach out anytime!</p>
+                    <p>If you'd like to discuss the weather app, data sources, or potential collaborations, reach out anytime!</p>
                     <ul class="list-unstyled">
                         <li><strong>Email:</strong> support@weatherdashboard.com</li>
                         <li><strong>Phone:</strong> +44751905192</li>
@@ -59,7 +64,8 @@
         </div>
     </div>
 
-
+    <!-- Bootstrap JS 5.3 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-JFZ/xIu1zEpj60YvXn+xMZfD8KcbRw0lF9gGZj27lExSqsXGQq1WQFShoOf0Uh4N" crossorigin="anonymous"></script>
+        integrity="sha384-JFZ/xIu1zEpj60YvXn+xMZfD8KcbRw0lF9gGZj27lExSqsXGQq1WQFShoOf0Uh4N"
+        crossorigin="anonymous"></script>
 </body>
