--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 </head>
 <main>
-<body>
+
+    <body>
     <div class="container py-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div class="weather-header d-flex align-items-center">
@@ -51,7 +52,28 @@
             </div>
         </div>
     </div>
-    </main>
+</head>
+
+<body>
+
+<div class="d-flex justify-content-center align-items-center gap-4 toolbar">
+    <div class="d-flex flex-column align-items-center">
+        <img src="Green_Tubby.png" alt="Green Tubby" class="img-fluid rounded-circle"
+            style="width: 200px; height: 200px;" />
+        <button class="btn btn-primary mt-2">Tubby Morning!!!</button>
+    </div>
+    <div class="d-flex flex-column align-items-center">
+        <img src="Purple_tubby.png" alt="Purple Tubby" class="img-fluid rounded-circle"
+            style="width: 200px; height: 200px;" />
+        <button class="btn btn-primary mt-2">Tubby Evening!!!</button>
+    </div>
+    <div class="d-flex flex-column align-items-center">
+        <img src="Red_tubby.png" alt="Red Tubby" class="img-fluid rounded-circle" style="width: 200px; height: 200px;" />
+        <button class="btn btn-primary mt-2">Tubby Night!!!</button>
+    </div>
+</div>
+</body>
+</main>
 </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JFZ/xIu1zEpj60YvXn+xMZfD8KcbRw0lF9gGZj27lExSqsXGQq1WQFShoOf0Uh4N" crossorigin="anonymous"></script>
