Tubby_button_img

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
         <div class="weather-dashboard mx-auto">
             <div class="row justify-content-center mb-4 input-section">
                 <div class="col-md-8 d-flex">
-                    <input type="text" id="city" class="form-control me-2" placeholder="Enter city name..." required
+                    <input type="text" id="city" class="form-control me-2"
+                           placeholder="Enter city name..." required
                            aria-label="City name"/>
                     <button id="get-weather" class="btn btn-primary">Get Weather</button>
                 </div>
@@ -77,6 +78,21 @@
                 <div id="weatherSunrise"></div>
                 <div id="weatherSunset"></div>
             </div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center align-items-center gap-4 toolbar">
+        <div class="d-flex flex-column align-items-center">
+            <img src="Green_Tubby.png" alt="Green Tubby" class="img-fluid rounded-circle tubby-img">
+            <button class="btn btn-primary mt-2">Tubby Morning!!!</button>
+        </div>
+        <div class="d-flex flex-column align-items-center">
+            <img src="Purple_tubby.png" alt="Purple Tubby" class="img-fluid rounded-circle tubby-img">
+            <button class="btn btn-primary mt-2">Tubby Evening!!!</button>
+        </div>
+        <div class="d-flex flex-column align-items-center">
+            <img src="Red_tubby.png" alt="Red Tubby" class="img-fluid rounded-circle tubby-img">
+            <button class="btn btn-primary mt-2">Tubby Night!!!</button>
         </div>
     </div>
 </main>
