--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="#">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
                 <img src="Telly_Sun.jpeg" alt="Sun Icon" class="telly-sun">
                 Weather Dashboard
             </a>
