--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="Telly_Sun.jpeg" alt="Sun Icon" class="telly-sun">
+                <img src="assets/images/Telly_Sun.jpeg" alt="Sun Icon" class="telly-sun">
                 Weather Dashboard
             </a>
             <div class="d-flex">
