--- a/index.html
+++ b/index.html
@@ -82,17 +82,15 @@
 
     <div class="d-flex justify-content-center align-items-center gap-4 toolbar">
         <div class="d-flex flex-column align-items-center">
-            <img src="assets/images/Green_Tubby.png" alt="Green Tubby" class="img-fluid rounded-circle"
-                 style="width: 200px; height: 200px;" />
+            <img src="assets/images/Green_Tubby.png" alt="Green Tubby" class="img-fluid rounded-circle tubby-img">
             <button class="btn btn-primary mt-2">Tubby Morning!!!</button>
         </div>
         <div class="d-flex flex-column align-items-center">
-            <img src="assets/images/Purple_tubby.png" alt="Purple Tubby" class="img-fluid rounded-circle"
-                 style="width: 200px; height: 200px;" />
+            <img src="assets/images/Purple_tubby.png" alt="Purple Tubby" class="img-fluid rounded-circle tubby-img">
             <button class="btn btn-primary mt-2">Tubby Evening!!!</button>
         </div>
         <div class="d-flex flex-column align-items-center">
-            <img src="assets/images/Red_tubby.png" alt="Red Tubby" class="img-fluid rounded-circle" style="width: 200px; height: 200px;" />
+            <img src="assets/images/Red_tubby.png" alt="Red Tubby" class="img-fluid rounded-circle tubby-img">
             <button class="btn btn-primary mt-2">Tubby Night!!!</button>
         </div>
     </div>
