--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand d-flex align-items-center" href="index.html">
-                <img src="Telly_Sun.jpeg" alt="Sun Icon" class="telly-sun">
+                <img src="assets/images/Telly_Sun.jpeg" alt="Sun Icon" class="telly-sun">
                 Weather Dashboard
             </a>
             <div class="d-flex">
@@ -47,8 +47,7 @@
     <div class="container py-5">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <div class="weather-header d-flex align-items-center">
-                <img src="Telly_Sun.jpeg" alt="Sun Icon" style="height:50px; width:auto; margin-right:10px;"/>
-
+                <img src="assets/images/Telly_Sun.jpeg" alt="Sun Icon" class="telly-sun">
                 <h1 class="m-0">Weather App</h1>
             </div>
             <div>
@@ -59,7 +58,8 @@
         <div class="weather-dashboard mx-auto">
             <div class="row justify-content-center mb-4 input-section">
                 <div class="col-md-8 d-flex">
-                    <input type="text" id="city" class="form-control me-2" placeholder="Enter city name..." required
+                    <input type="text" id="city" class="form-control me-2"
+                           placeholder="Enter city name..." required
                            aria-label="City name"/>
                     <button id="get-weather" class="btn btn-primary">Get Weather</button>
                 </div>
@@ -77,6 +77,21 @@
                 <div id="weatherSunrise"></div>
                 <div id="weatherSunset"></div>
             </div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-center align-items-center gap-4 toolbar">
+        <div class="d-flex flex-column align-items-center">
+            <img src="assets/images/Green_Tubby.png" alt="Green Tubby" class="img-fluid rounded-circle tubby-img">
+            <button class="btn btn-primary mt-2">Tubby Morning!!!</button>
+        </div>
+        <div class="d-flex flex-column align-items-center">
+            <img src="assets/images/Purple_tubby.png" alt="Purple Tubby" class="img-fluid rounded-circle tubby-img">
+            <button class="btn btn-primary mt-2">Tubby Evening!!!</button>
+        </div>
+        <div class="d-flex flex-column align-items-center">
+            <img src="assets/images/Red_tubby.png" alt="Red Tubby" class="img-fluid rounded-circle tubby-img">
+            <button class="btn btn-primary mt-2">Tubby Night!!!</button>
         </div>
     </div>
 </main>
